updated button text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="card-body">
               <h5 class="card-title text-white fs-3">Car Emission</h5>
               <p class="card-text text-white">Estimate your car's carbon emissions based on fuel type and distance traveled to make greener transportation choices.</p>
-              <a href="../car/car.html" class="btn btn-dark">Estimate now</a>
+              <a href="../car/car.html" class="btn btn-dark">Estimate</a>
             </div>
           </div>
         </div>
