fix: correct label text for driving distance input

--- a/car/car.html
+++ b/car/car.html
@@ -40,7 +40,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="additionalInput1" class="text-white fs-2" >Driving Distance distance</label>
+                    <label for="additionalInput1" class="text-white fs-2" >Driving Distance </label>
                     <input type="number" class=" distance form-control" id="distance" placeholder="(in km)">
                 </div>
                 <div class=" d-flex justify-content-left mt-4">
